# ara-toolchains

./: README.md  arm_toolchain.sh  gcc_version.py  init_riscv_toolchain.sh  llvm_targets.py  meson.build  meson_options.txt
subprojects/: ara-link.wrap
