# arm
option('enable_arm', type: 'feature', value: 'auto', yield: true,
  description: 'Require a toolchain for the ARM architecture.')
option('arm_libs', type: 'string', value: '/usr/lib/arm-none-eabi', yield: true,
  description: 'Path to the ARM libraries')
option('arm_include_dir', type: 'string', value: '@0@/include', yield: true,
    description: 'A list of include dirs for compiling for ARM. @0@ is replaced by the value of arm_libs.')
option('arm_link_dir', type: 'string', value: '@0@/lib', yield: true,
    description: 'A list of link dirs for compiling for ARM. @0@ is replaced by the value of arm_libs')
option('arm_gcc_dir', type: 'string', value: '/usr/lib/gcc/arm-none-eabi/@0@/', yield: true,
    description: 'The path to the GCC ARM toolchain. Note that @0@ is replaced with the arm_gcc_version. Only relevant, if arch==arm. (Sometimes need to remove trailing nofp/)')
option('arm_gcc_version', type: 'string', value: 'default', yield: true,
    description: 'The version of the GCC cross compiler for ARM. The special value of "default" assumes the same version like the system GCC.')
