# posix, currently only supported as native build
option('enable_posix', type: 'feature', value: 'auto', yield: true,
  description: 'Only supported as native build (requires a Linux machine).')

# arm
option('enable_arm', type: 'feature', value: 'auto', yield: true,
  description: 'Require a toolchain for the ARM architecture.')
option('arm_libs', type: 'string', value: '/usr/lib/arm-none-eabi', yield: true,
  description: 'Path to the ARM libraries')
option('arm_include_dir', type: 'string', value: '@0@/include', yield: true,
    description: 'A list of include dirs for compiling for ARM. @0@ is replaced by the value of arm_libs.')
option('arm_link_dir', type: 'string', value: '@0@/lib', yield: true,
    description: 'A list of link dirs for compiling for ARM. @0@ is replaced by the value of arm_libs')
option('arm_gcc_dir', type: 'string', value: '/usr/lib/gcc/arm-none-eabi/@0@/', yield: true,
    description: 'The path to the GCC ARM toolchain. Note that @0@ is replaced with the arm_gcc_version. Only relevant, if arch==arm. (Sometimes need to remove trailing nofp/)')
option('arm_gcc_version', type: 'string', value: 'default', yield: true,
    description: 'The version of the GCC cross compiler for ARM. The special value of "default" assumes the same version like the system GCC.')
option('arm_cxx_dir', type: 'string', value: 'default', yield: true,
    description: 'The path to the STL C++ libs for ARM. The special value of "default" assumes a directory within arm_gcc_dir.')

# riscv
option('enable_riscv', type: 'feature', value: 'auto', yield: true,
  description: 'Require a toolchain for the RISC-V 32 architecture.')
option('riscv_libs', type: 'string', value: '/usr/lib/riscv-none-eabi', yield: true,
  description: 'Path to the RISC-V 32 libraries')
option('riscv_include_dir', type: 'string', value: '@0@/include', yield: true,
    description: 'A list of include dirs for compiling for RISC-V 32. @0@ is replaced by the value of riscv_libs.')
option('riscv_link_dir', type: 'string', value: '@0@/lib', yield: true,
    description: 'A list of link dirs for compiling for RISC-V 32. @0@ is replaced by the value of riscv_libs')
option('riscv_gcc_dir', type: 'string', value: '/usr/lib/gcc/riscv-none-elf/@0@/', yield: true,
    description: 'The path to the GCC RISC-V 32 toolchain. Note that @0@ is replaced with the riscv_gcc_version. Only relevant, if arch==riscv. (Sometimes need to remove trailing nofp/)')
option('riscv_gcc_version', type: 'string', value: 'default', yield: true,
    description: 'The version of the GCC cross compiler for RISC-V 32. The special value of "default" assumes the same version like the system GCC.')
option('riscv_cxx_dir', type: 'string', value: 'default', yield: true,
    description: 'The path to the STL C++ libs for RISC-V 32. The special value of "default" assumes a directory within riscv_gcc_dir.')
