# posix, currently only supported as native build
option('enable_posix', type: 'feature', value: 'auto', yield: true,
  description: 'Only supported as native build (requires a Linux machine).')

# arm
option('enable_arm', type: 'feature', value: 'auto', yield: true,
  description: 'Require a toolchain for the ARM architecture.')

# riscv
option('enable_riscv', type: 'feature', value: 'auto', yield: true,
  description: 'Require a toolchain for the RISC-V 32 architecture.')
